--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Header -->
         <header class="fade-in">
             <div class="logo">
-                <img src="static/images/mri-sample.jpg" alt="NeuroVision AI">
+                <img src="mri-sample.jpg" alt="NeuroVision AI">
                 <span>NeuroVision AI</span>
             </div>
             <nav>
