--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Header -->
         <header class="fade-in">
             <div class="logo">
-                <img src="mri-sample.jpg" alt="NeuroVision AI">
+                <img logo.svg" alt="NeuroVision AI">
                 <span>NeuroVision AI</span>
             </div>
             <nav>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="hero-image float">
-                <img src="images/mri-sample.jpg" alt="MRI Scan">
+                <img src="mri-sample.jpg" alt="MRI Scan">
                 <div class="scan-overlay"></div>
             </div>
         </section>
