--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Header -->
         <header class="fade-in">
             <div class="logo">
-                <img logo.svg" alt="NeuroVision AI">
+                <img ="logo.svg" alt="NeuroVision AI">
                 <span>NeuroVision AI</span>
             </div>
             <nav>
