--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <section class="upload-section" id="upload">
             <div class="upload-container scale-in">
                 <div class="upload-header">
-                    <h2>Upload Your MRI Scans</h2>
-                    <p>Supported formats: DICOM, NIfTI, JPEG, PNG (Max 10 files, 50MB each)</p>
+                    <h2>Upload Your MRI Scans </h2>
+                    <p>Will not work because github doesn't have trained model. check github for sample output</p>
                 </div>
                 <div class="upload-area" id="dropZone">
                     <i class="fas fa-cloud-upload-alt"></i>
