--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div class="main-container">
         <!-- Header -->
         <header class="fade-in">
-            <div class="logo">
-                <img ="logo.svg" alt="NeuroVision AI">
-                <span>NeuroVision AI</span>
-            </div>
+                <div class="logo">
+                    <img src="logo.svg" alt="NeuroVision AI">
+                    <span>NeuroVision AI</span>
+                </div>
             <nav>
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
