--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="/" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
-                    <li><a href="/faq">FAQ</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                 </ul>
             </nav>
         </header>
