--- a/faq.html
+++ b/faq.html
@@ -34,8 +34,8 @@
       </div>
       <nav>
         <ul>
-            <li><a href="/" class="active">Home</a></li>
-            <li><a href="/faq">FAQ</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
       </nav>
     </header>
